/*
 * Copyright 2024 Google LLC
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     https://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

option java_package = "org.groundplatform.android.test";
option java_multiple_files = true;

message TestDocument {
    string id = 1;
    map<string, NestedTestObject> obj_map = 2;
}

message NestedTestObject {
    string name = 1;
    DeeplyNestedTestObject other_thing = 2;
}

message DeeplyNestedTestObject {
    string id = 1;
}
